force-app/main/default/objects/out_of_office__c/out_of_office__c.object-meta.xml
<CustomObject>
    <label>Out of office requests</label>
    <nameField>
        <label>out of office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Out of office requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>