force-app/main/default/objects/out_of_office__c/fields/ProjectManager__c.field-meta.xml
<CustomField>
    <fullName>ProjectManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>out_of_office1</relationshipName>
    <type>Lookup</type>
</CustomField>