force-app/main/default/objects/out_of_office__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <label>Resource Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>