force-app/main/default/objects/out_of_office__c/fields/SquadLead__c.field-meta.xml
<CustomField>
    <fullName>SquadLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Squad Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>out_of_office2</relationshipName>
    <type>Lookup</type>
</CustomField>