force-app/main/default/objects/out_of_office__c/fields/start_date__c.field-meta.xml
<CustomField>
    <fullName>start_date__c</fullName>
    <label>start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>