force-app/main/default/objects/out_of_office__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>User__c</columns>
    <columns>Project_Name__c</columns>
    <columns>start_date__c</columns>
    <columns>end_date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>