force-app/main/default/objects/out_of_office__c/listViews/My_request.listView-meta.xml
<ListView>
    <fullName>My_request</fullName>
    <columns>User__c</columns>
    <columns>Project_Name__c</columns>
    <columns>start_date__c</columns>
    <columns>end_date__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My request</label>
</ListView>